--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "^1.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "jasmine-async-sugar": "~1.3.0"
   },
   "appPath": "app",
   "moduleName": "angularParseApp",
