--- a/bower.json
+++ b/bower.json
@@ -4,15 +4,9 @@
   "dependencies": {
     "angular": "^1.3.0",
     "bootstrap": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-aria": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
-    "angular-ui-ace": "bower"
+    "ace-builds": "src-min-noconflict",
+    "angular-ui-ace": "bower",
+    "json-formatter": "~0.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
